# aegis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default_policy.yaml  strict_policy.yaml
examples/: agent_security.py  guardrails_proxy.py  red_team_scan.py
src/aegis/: __init__.py  cli.py  engine.py
src/aegis/agent/: __init__.py  sandbox.py  trajectory.py
src/aegis/api/: __init__.py  server.py
src/aegis/detection/: __init__.py  classifier.py  embeddings.py
src/aegis/guardrails/: __init__.py  policy.py  proxy.py
src/aegis/redteam/: __init__.py  attacks.py  mutator.py  reporter.py  scanner.py
src/aegis/utils/: logging.py
tests/: test_attacks.py  test_classifier.py  test_embeddings.py  test_mutator.py  test_policy.py  test_sandbox.py  test_trajectory.py
