[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-ai"
version = "0.1.0"
description = "LLM Security Testing Framework & Runtime Guardrails Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andrew Stafford" }]
keywords = ["llm", "security", "guardrails", "prompt-injection", "red-team", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.26",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "tiktoken>=0.7.0",
    "regex>=2024.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.8"]
ml = ["torch>=2.1", "transformers>=4.36", "sentence-transformers>=3.0"]

[project.scripts]
aegis = "aegis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
